# SLM

./: .gitignore  Makefile  README.md  goal.md  pyproject.toml  run.sh  run_pipeline.sh  run_tokenizer.sh  wip.txt
apps/: streamlit_chatbot.py
configs/: eval.yml  mid_train_200m.yml  mid_train_200m_debug.yml  sft_200m.yml  sft_200m_debug.yml  train_200m_fineweb_edu.yml  train_200m_fineweb_edu_byte_bpe_gpt2.yml  train_200m_fineweb_edu_debug.yml
docs/: architecture.md  configs.md  dataset.md  distributed_training.md  examples.md  how-to-run.md  results.md  running.md  streamlit.md  text_generation_examples.md  tokenizer.md  training.md
notebooks/: comparison.ipynb  processed_metadata_training_plots.ipynb
pre-train/: run.sh
scripts/: count_parameters.py  evaluate.py  evaluate_benchmarks.py  launch_pretrain_ddp.sh  mid_train.py  mid_training_bbpe.sh  plot_train_loss.py  plot_training.py  prepare_pretrain_data.py  retokenize_superbpe_to_byte_bpe.py  run_all.py  run_pipeline.sh  run_tokenizer.sh  sample_checkpoint.py  sft.py  sft.sh  smoke_overfit_batch.py  tokenize_dataset.py  train.py  train_tokenizer.py
src/: config.py  utils.py
tasks/: 01_config.md  02_tokenizer.md  03_model.md  04_training.md  05_plots.md  06_docs.md  07_mid_training.md  08_sft.md  09_evaluation.md  10_demo_presentation.md  comparison.md
tests/: test_ddp_sync.py  test_evaluation.py  test_hf_stream.py  test_inference_runtime.py  test_mid_train_checkpointing.py  test_mid_train_streaming.py  test_packer.py  test_plotting.py  test_pretrained_tokenizer_config.py  test_run_config_schema.py  (+6 more)
(+128 files in other folders)
