[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-pretrain"
version = "0.1.0"
description = "Pretraining scaffold for the Deep Learning II SLM project"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "datasets>=2.19.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "tiktoken>=0.6.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
